// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugins/AddonCatalog/Catalog Overview 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="css-3bvl02-ComponentFilter"
    >
      <div
        style="display: inline-block;"
      >
        <div
          class="css-nnvwbb-SearchInput"
        >
          <input
            aria-label="type some text to start searching"
            class="css-1rimw92-ComponentFilter"
            placeholder="search..."
            value=""
          />
          <svg
            aria-hidden="true"
            class="css-1f2hmcd-SearchInput"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1rkktkn-ComponentFilter"
      >
        <div
          class="css-1pwn4pj-ComponentFilter"
        >
          sort by:
        </div>
        <div
          class="css-4cffwv"
        >
          <select
            class="css-e7xs09-ComponentFilter"
          >
            <option
              value="name"
            >
              Component name
            </option>
            <option
              value="date_created_asc"
            >
              Oldest created
            </option>
            <option
              value="date_created_desc"
            >
              Newest created
            </option>
            <option
              value="date_modified_asc"
            >
              Oldest updated
            </option>
            <option
              value="date_modified_desc"
            >
              Newest updated
            </option>
            <option
              value="size_asc"
            >
              Smallest size
            </option>
            <option
              value="size_desc"
            >
              Largest size
            </option>
            <option
              value="commits_desc"
            >
              Most commits
            </option>
            <option
              value="commits_asc"
            >
              Least commits
            </option>
            <option
              value="comments_desc"
            >
              Most commented
            </option>
            <option
              value="comments_asc"
            >
              Least commented
            </option>
          </select>
          <svg
            class="css-1swud1q"
            fill="currentcolor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class="css-vc9b9i"
      >
        <div
          class="css-fo5v1-ComponentList"
        >
          <div
            class="css-wh7vml"
          >
            <div
              class="css-nj7jql-ComponentCard"
            >
              <a
                class="css-1t54e2w"
                href="/docs/id-of-story"
              >
                <div
                  class="css-kbmfeb-ComponentCard"
                />
              </a>
              <div
                class="css-10zcph3-ComponentCard"
              />
            </div>
            <div
              class="css-14a8v30-PackageLink"
            >
              <a
                class="css-1t54e2w"
                href="https://npmjs.com/package/@component-controls/blocks/v/1.0.3"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="css-13b120i-PackageLink"
                >
                  @component-controls/blocks
                </div>
              </a>
              <span
                class="css-n8ts03-PackageLink"
              >
                <span
                  class="css-vurnku"
                >
                  1.0.3
                </span>
              </span>
            </div>
            <div
              class="css-1akfoys-ComponentCard"
            />
            <div
              class="css-k8h5so-ComponentCard"
            >
              <div
                class="css-nxqmcg-ComponentCard"
                data-testid="story"
                id="id-of-story"
              >
                <div
                  class="story-render-container css-dhmrnb"
                >
                  <h2
                    class="css-229nmx"
                  >
                    Components
                  </h2>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plugins/AddonCatalog/ComponentCard Overview 1`] = `
<DocumentFragment>
  <div
    class="css-wh7vml"
  >
    <div
      class="css-nj7jql-ComponentCard"
    >
      <a
        class="css-1t54e2w"
        href=""
      >
        <div
          class="css-kbmfeb-ComponentCard"
        >
          Control
        </div>
      </a>
      <div
        class="css-10zcph3-ComponentCard"
      >
        <div
          class="css-6582y1-ComponentContributors"
        >
          <div
            aria-label="avatars of [object Object], [object Object], [object Object]"
            class="css-1wxrz40-GithubAvatarList"
          >
            <a
              aria-label="visit profile of hasparus"
              class="css-1l46c3u-GithubAvatarItem"
              href=""
            >
              <img
                alt="hasparus"
                class="css-1y16e88"
                height="24"
                src="https://github.com/hasparus"
                title="hasparus"
                width="24"
              />
            </a>
            <a
              aria-label="visit profile of lachlanjc"
              class="css-1l46c3u-GithubAvatarItem"
              href=""
            >
              <img
                alt="lachlanjc"
                class="css-1y16e88"
                height="24"
                src="https://github.com/lachlanjc"
                title="lachlanjc"
                width="24"
              />
            </a>
            <a
              aria-label="visit profile of atanasster"
              class="css-1l46c3u-GithubAvatarItem"
              href=""
            >
              <img
                alt="atanasster"
                class="css-1y16e88"
                height="24"
                src="https://github.com/atanasster"
                title="atanasster"
                width="24"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1akfoys-ComponentCard"
    />
    <p>
      Markdown descripton for component.
with a 
      <a
        href="https://google.com"
      >
        link
      </a>
    </p>
    <div
      class="css-pfgifj-ComponentCard"
    >
      <div
        class="css-1lguarf-ComponentCard"
      >
        <div
          class="css-zf8zhj"
        >
          <span
            class="css-13o2efz"
          >
            created:
          </span>
          <span
            class="css-uv6qe8"
          >
            N/A
          </span>
        </div>
        <div
          class="css-zf8zhj"
        >
          <span
            class="css-13o2efz"
          >
            updated:
          </span>
          <span
            class="css-uv6qe8"
          >
            N/A
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plugins/AddonCatalog/ComponentFilter Overview 1`] = `
<DocumentFragment>
  <div
    class="css-3bvl02-ComponentFilter"
  >
    <div
      style="display: inline-block;"
    >
      <div
        class="css-nnvwbb-SearchInput"
      >
        <input
          aria-label="type some text to start searching"
          class="css-o7a2z8-ComponentFilter"
          placeholder="search..."
          value=""
        />
        <svg
          aria-hidden="true"
          class="css-1f2hmcd-SearchInput"
          fill="currentColor"
          height="16"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-1rkktkn-ComponentFilter"
    >
      <div
        class="css-1pwn4pj-ComponentFilter"
      >
        sort by:
      </div>
      <div
        class="css-4cffwv"
      >
        <select
          class="css-e7xs09-ComponentFilter"
        >
          <option
            value="name"
          >
            Component name
          </option>
          <option
            value="date_created_asc"
          >
            Oldest created
          </option>
          <option
            value="date_created_desc"
          >
            Newest created
          </option>
          <option
            value="date_modified_asc"
          >
            Oldest updated
          </option>
          <option
            value="date_modified_desc"
          >
            Newest updated
          </option>
          <option
            value="size_asc"
          >
            Smallest size
          </option>
          <option
            value="size_desc"
          >
            Largest size
          </option>
          <option
            value="commits_desc"
          >
            Most commits
          </option>
          <option
            value="commits_asc"
          >
            Least commits
          </option>
          <option
            value="comments_desc"
          >
            Most commented
          </option>
          <option
            value="comments_asc"
          >
            Least commented
          </option>
        </select>
        <svg
          class="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plugins/AddonCatalog/ComponentList Overview 1`] = `
<DocumentFragment>
  <div
    class="css-1xm7kb8-ComponentList"
  >
    <div
      class="css-wh7vml"
    >
      <div
        class="css-nj7jql-ComponentCard"
      >
        <a
          class="css-1t54e2w"
          href="/docs/blocks-core-story-plain--controls"
        >
          <div
            class="css-kbmfeb-ComponentCard"
          >
            Control
          </div>
        </a>
        <div
          class="css-10zcph3-ComponentCard"
        >
          <div
            class="css-6582y1-ComponentContributors"
          >
            <div
              aria-label="avatars of [object Object], [object Object], [object Object]"
              class="css-1wxrz40-GithubAvatarList"
            >
              <a
                aria-label="visit profile of hasparus"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="hasparus"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/hasparus"
                  title="hasparus"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of lachlanjc"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="lachlanjc"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/lachlanjc"
                  title="lachlanjc"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of atanasster"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="atanasster"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/atanasster"
                  title="atanasster"
                  width="24"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1akfoys-ComponentCard"
      />
      <p>
        Markdown descripton for component.
with a 
        <a
          href="https://google.com"
        >
          link
        </a>
      </p>
      <div
        class="css-k8h5so-ComponentCard"
      >
        <div
          class="css-nxqmcg-ComponentCard"
          data-testid="story"
          id="blocks-core-story-plain--controls"
        >
          <div
            class="story-render-container css-dhmrnb"
          >
            <svg
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuenow="0.5"
              class="css-14d2907"
              fill="none"
              height="128"
              role="img"
              stroke="currentcolor"
              stroke-width="2"
              viewBox="0 0 32 32"
              width="128"
            >
              <circle
                cx="16"
                cy="16"
                opacity="0.125"
                r="14"
              />
              <circle
                cx="16"
                cy="16"
                r="14"
                stroke-dasharray="87.96459430051421"
                stroke-dashoffset="43.982297150257104"
                transform="rotate(-90 16 16)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-pfgifj-ComponentCard"
      >
        <div
          class="css-1lguarf-ComponentCard"
        >
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              created:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              updated:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-wh7vml"
    >
      <div
        class="css-nj7jql-ComponentCard"
      >
        <a
          class="css-1t54e2w"
          href="/docs/blocks-core-story-plain--controls"
        >
          <div
            class="css-kbmfeb-ComponentCard"
          >
            Control
          </div>
        </a>
        <div
          class="css-10zcph3-ComponentCard"
        >
          <div
            class="css-6582y1-ComponentContributors"
          >
            <div
              aria-label="avatars of [object Object], [object Object], [object Object]"
              class="css-1wxrz40-GithubAvatarList"
            >
              <a
                aria-label="visit profile of hasparus"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="hasparus"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/hasparus"
                  title="hasparus"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of lachlanjc"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="lachlanjc"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/lachlanjc"
                  title="lachlanjc"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of atanasster"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="atanasster"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/atanasster"
                  title="atanasster"
                  width="24"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1akfoys-ComponentCard"
      />
      <p>
        Markdown descripton for component.
with a 
        <a
          href="https://google.com"
        >
          link
        </a>
      </p>
      <div
        class="css-k8h5so-ComponentCard"
      >
        <div
          class="css-nxqmcg-ComponentCard"
          data-testid="story"
          id="blocks-core-story-plain--controls"
        >
          <div
            class="story-render-container css-dhmrnb"
          >
            <svg
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuenow="0.5"
              class="css-14d2907"
              fill="none"
              height="128"
              role="img"
              stroke="currentcolor"
              stroke-width="2"
              viewBox="0 0 32 32"
              width="128"
            >
              <circle
                cx="16"
                cy="16"
                opacity="0.125"
                r="14"
              />
              <circle
                cx="16"
                cy="16"
                r="14"
                stroke-dasharray="87.96459430051421"
                stroke-dashoffset="43.982297150257104"
                transform="rotate(-90 16 16)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-pfgifj-ComponentCard"
      >
        <div
          class="css-1lguarf-ComponentCard"
        >
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              created:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              updated:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-wh7vml"
    >
      <div
        class="css-nj7jql-ComponentCard"
      >
        <a
          class="css-1t54e2w"
          href="/docs/blocks-core-story-plain--controls"
        >
          <div
            class="css-kbmfeb-ComponentCard"
          >
            Control
          </div>
        </a>
        <div
          class="css-10zcph3-ComponentCard"
        >
          <div
            class="css-6582y1-ComponentContributors"
          >
            <div
              aria-label="avatars of [object Object], [object Object], [object Object]"
              class="css-1wxrz40-GithubAvatarList"
            >
              <a
                aria-label="visit profile of hasparus"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="hasparus"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/hasparus"
                  title="hasparus"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of lachlanjc"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="lachlanjc"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/lachlanjc"
                  title="lachlanjc"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of atanasster"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="atanasster"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/atanasster"
                  title="atanasster"
                  width="24"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1akfoys-ComponentCard"
      />
      <p>
        Markdown descripton for component.
with a 
        <a
          href="https://google.com"
        >
          link
        </a>
      </p>
      <div
        class="css-k8h5so-ComponentCard"
      >
        <div
          class="css-nxqmcg-ComponentCard"
          data-testid="story"
          id="blocks-core-story-plain--controls"
        >
          <div
            class="story-render-container css-dhmrnb"
          >
            <svg
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuenow="0.5"
              class="css-14d2907"
              fill="none"
              height="128"
              role="img"
              stroke="currentcolor"
              stroke-width="2"
              viewBox="0 0 32 32"
              width="128"
            >
              <circle
                cx="16"
                cy="16"
                opacity="0.125"
                r="14"
              />
              <circle
                cx="16"
                cy="16"
                r="14"
                stroke-dasharray="87.96459430051421"
                stroke-dashoffset="43.982297150257104"
                transform="rotate(-90 16 16)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-pfgifj-ComponentCard"
      >
        <div
          class="css-1lguarf-ComponentCard"
        >
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              created:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              updated:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-wh7vml"
    >
      <div
        class="css-nj7jql-ComponentCard"
      >
        <a
          class="css-1t54e2w"
          href="/docs/blocks-core-story-plain--controls"
        >
          <div
            class="css-kbmfeb-ComponentCard"
          >
            Control
          </div>
        </a>
        <div
          class="css-10zcph3-ComponentCard"
        >
          <div
            class="css-6582y1-ComponentContributors"
          >
            <div
              aria-label="avatars of [object Object], [object Object], [object Object]"
              class="css-1wxrz40-GithubAvatarList"
            >
              <a
                aria-label="visit profile of hasparus"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="hasparus"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/hasparus"
                  title="hasparus"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of lachlanjc"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="lachlanjc"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/lachlanjc"
                  title="lachlanjc"
                  width="24"
                />
              </a>
              <a
                aria-label="visit profile of atanasster"
                class="css-1l46c3u-GithubAvatarItem"
                href=""
              >
                <img
                  alt="atanasster"
                  class="css-1y16e88"
                  height="24"
                  src="https://github.com/atanasster"
                  title="atanasster"
                  width="24"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1akfoys-ComponentCard"
      />
      <p>
        Markdown descripton for component.
with a 
        <a
          href="https://google.com"
        >
          link
        </a>
      </p>
      <div
        class="css-k8h5so-ComponentCard"
      >
        <div
          class="css-nxqmcg-ComponentCard"
          data-testid="story"
          id="blocks-core-story-plain--controls"
        >
          <div
            class="story-render-container css-dhmrnb"
          >
            <svg
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuenow="0.5"
              class="css-14d2907"
              fill="none"
              height="128"
              role="img"
              stroke="currentcolor"
              stroke-width="2"
              viewBox="0 0 32 32"
              width="128"
            >
              <circle
                cx="16"
                cy="16"
                opacity="0.125"
                r="14"
              />
              <circle
                cx="16"
                cy="16"
                r="14"
                stroke-dasharray="87.96459430051421"
                stroke-dashoffset="43.982297150257104"
                transform="rotate(-90 16 16)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-pfgifj-ComponentCard"
      >
        <div
          class="css-1lguarf-ComponentCard"
        >
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              created:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
          <div
            class="css-zf8zhj"
          >
            <span
              class="css-13o2efz"
            >
              updated:
            </span>
            <span
              class="css-uv6qe8"
            >
              N/A
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plugins/AddonCatalog/ComponentsCatalog Overview 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-vc9b9i"
    >
      <div
        class="css-fo5v1-ComponentList"
      >
        <div
          class="css-wh7vml"
        >
          <div
            class="css-nj7jql-ComponentCard"
          >
            <a
              class="css-1t54e2w"
              href="/docs/id-of-story"
            >
              <div
                class="css-kbmfeb-ComponentCard"
              />
            </a>
            <div
              class="css-10zcph3-ComponentCard"
            />
          </div>
          <div
            class="css-14a8v30-PackageLink"
          >
            <a
              class="css-1t54e2w"
              href="https://npmjs.com/package/@component-controls/blocks/v/1.0.3"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="css-13b120i-PackageLink"
              >
                @component-controls/blocks
              </div>
            </a>
            <span
              class="css-n8ts03-PackageLink"
            >
              <span
                class="css-vurnku"
              >
                1.0.3
              </span>
            </span>
          </div>
          <div
            class="css-1akfoys-ComponentCard"
          />
          <div
            class="css-k8h5so-ComponentCard"
          >
            <div
              class="css-nxqmcg-ComponentCard"
              data-testid="story"
              id="id-of-story"
            >
              <div
                class="story-render-container css-dhmrnb"
              >
                <h2
                  class="css-229nmx"
                >
                  Components
                </h2>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
